syntax = "proto3";

package subscription.conf;

import "google/protobuf/duration.proto";

option go_package = "xinyuan_tech/subscription-service/internal/conf;conf";

// 启动配置
message Bootstrap {
  Server server = 1;
  Data data = 2;
  Client client = 3;
  Subscription subscription = 4;  // 订阅业务配置
  Cron cron = 5;                  // 定时任务配置
  Log log = 6;
}

// 服务配置
message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

// 数据配置
message Data {
  message Database {
    string driver = 1;
    string source = 2;
    int32 max_idle_conns = 3;
    int32 max_open_conns = 4;
    google.protobuf.Duration conn_max_lifetime = 5;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    string password = 3;
    int32 db = 4;
    google.protobuf.Duration dial_timeout = 5;
    google.protobuf.Duration read_timeout = 6;
    google.protobuf.Duration write_timeout = 7;
    int32 pool_size = 8;
    int32 min_idle_conns = 9;
  }
  Database database = 1;
  Redis redis = 2;
}

// 客户端配置（外部依赖服务）
message Client {
  PaymentService payment_service = 1;
  PassportService passport_service = 2;
}

// 支付服务配置
message PaymentService {
  string addr = 1;
}

// 用户服务配置
message PassportService {
  string addr = 1;
}

// 订阅业务配置
message Subscription {
  string return_url = 1;                 // 支付成功返回 URL
  int32 auto_renew_days_before = 2;      // 自动续费提前天数
  int32 expiry_check_days = 3;           // 过期检查天数
}

// 定时任务配置
message Cron {
  string expiry_check = 1;          // 过期检查 cron 表达式，默认: "0 0 2 * * *" (每天凌晨2点)
  string renewal_reminder = 2;      // 续费提醒 cron 表达式，默认: "0 0 10 * * *" (每天上午10点)
  string auto_renewal = 3;          // 自动续费 cron 表达式，默认: "0 0 3 * * *" (每天凌晨3点)
}

// 日志配置
message Log {
  string level = 1;
  string format = 2;
  string output = 3;
  string file_path = 4;
  int32 max_size = 5;        // MB
  int32 max_age = 6;         // 天
  int32 max_backups = 7;
  bool compress = 8;
}

